--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>stashbot</title>
-</head>
-<body>
-<h1>Stashbot</h1>
-<p>An IRC bot designed to store data in an Elasticsearch cluster.</p>
-<p>See also:</p>
-<ul>
-<li><a href="/bash/">bash</a></li>
-<li><a href="/sal/">sal</a></li>
-</ul>
-<p><a href="https://github.com/bd808/tools-stashbot">source</a></p>
-</body>
+<!--
+This file is part of bd808's stashbot application
+Copyright (C) 2015 Bryan Davis and contributors
+
+This program is free software: you can redistribute it and/or modify it
+under the terms of the GNU General Public License as published by the Free
+Software Foundation, either version 3 of the License, or (at your option)
+any later version.
+
+This program is distributed in the hope that it will be useful, but WITHOUT
+ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
+more details.
+
+You should have received a copy of the GNU General Public License along with
+this program.  If not, see <http://www.gnu.org/licenses/>.
+-->
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>stashbot</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width">
+    <link rel="stylesheet" href="normalize.css">
+    <style>
+      body {background:#fefefe;color:#333;padding:.5em;}
+      h1 {color:#484848;font-size:2em;padding:.5em;text-align:center;}
+      footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
+      #powered-by {float:left;}
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Stashbot</h1>
+    </header>
+    <section id="lead">
+      <p>An IRC bot designed to store data in an Elasticsearch cluster.</p>
+      <p>See also:</p>
+      <dl>
+        <dt><a href="/bash/">bash</a></dt>
+        <dd>A bash.org inspired quips server powered by Elasticsearch for Wikimedia.</dd>
+        <dt><a href="/sal/">sal</a></dt>
+        <dd>Display !log messages from IRC stored in Elasticsearch</dd>
+        <dt><a href="https://phabricator.wikimedia.org/p/Stashbot/">Phabricator user</a></dt>
+        <dd>Phabricator user account maintained by this bot</dd>
+        <dt><a href="https://wikitech.wikimedia.org/wiki/User:Stashbot">[[wikitech:User:Stashbot]]</a></dt>
+        <dd>Wikitech user account maintained by this bot</dd>
+      </dl>
+    </section>
+    <footer>
+      <div id="powered-by">
+        <a href="/"><img src="https://tools-static.wmflabs.org/static/logos/powered-by-tool-labs.png" alt="Powered by Wikimedia Tool Labs"></a>
+      </div>
+      <p>
+          <a href="https://github.com/bd808/tools-stashbot">source</a>
+          <a href="https://www.gnu.org/copyleft/gpl.html">GNU GPLv3+</a>
+      </p>
+    </footer>
+  </body>
 </html>
