More html piddling

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,8 +23,9 @@ this program.  If not, see <http://www.gnu.org/licenses/>.
     <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width">
     <link rel="stylesheet" href="normalize.css">
     <style>
-      body {background:#fefefe;color:#333;padding:.5em;}
+      body {background:#fefefe;color:#333;padding:.5em;font-family:"Linux Libertine",Georgia,Times,serif;}
       h1 {color:#484848;font-size:2em;padding:.5em;text-align:center;}
+      h2 {font-size:1.5em;margin-top:1em;margin-bottom:.25em;border-bottom:1px solid #aaa}
       footer {clear:both;margin-top:2em;padding-top:1em;border-top:1px solid #333;text-align:right;}
       #powered-by {float:left;}
     </style>
@@ -34,13 +35,22 @@ this program.  If not, see <http://www.gnu.org/licenses/>.
       <h1>Stashbot</h1>
     </header>
     <section id="lead">
-      <p>An IRC bot designed to store data in an Elasticsearch cluster.</p>
-      <p>See also:</p>
+      <p>An IRC bot designed to store data in an Elasticsearch cluster, update wiki pages, update Phabricator tasks, send tweets, and generally be awesome.</p>
+    </section>
+    <section id="related">
+      <h2>Related tools</h2>
       <dl>
         <dt><a href="/bash/">bash</a></dt>
         <dd>A bash.org inspired quips server powered by Elasticsearch for Wikimedia.</dd>
         <dt><a href="/sal/">sal</a></dt>
         <dd>Display !log messages from IRC stored in Elasticsearch</dd>
+      </dl>
+    </section>
+    <section id="see-also">
+      <h2>See also</h2>
+      <dl>
+        <dt><a href="https://wikitech.wikimedia.org/wiki/Tool:Stashbot">Dcoumentation</a></dt>
+        <dd>Documentation for Stashbot on Wikitech</dd>
         <dt><a href="https://phabricator.wikimedia.org/p/Stashbot/">Phabricator user</a></dt>
         <dd>Phabricator user account maintained by this bot</dd>
         <dt><a href="https://wikitech.wikimedia.org/wiki/User:Stashbot">[[wikitech:User:Stashbot]]</a></dt>
