Update website bits and pieces
* toolforge.org URLs!
* es7 backend
* Code is in Gerrit these days

Change-Id: I6a79ac7a26d5cc5927b969c939671dea46e70305

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,9 +40,9 @@ this program.  If not, see <http://www.gnu.org/licenses/>.
     <section id="related">
       <h2>Related tools</h2>
       <dl>
-        <dt><a href="/bash/">bash</a></dt>
+        <dt><a href="https://bash.toolforge.org/">bash</a></dt>
         <dd>A bash.org inspired quips server powered by Elasticsearch for Wikimedia.</dd>
-        <dt><a href="/sal/">sal</a></dt>
+        <dt><a href="https://sal.toolforge.org/">sal</a></dt>
         <dd>Display !log messages from IRC stored in Elasticsearch</dd>
       </dl>
     </section>
