public_html: update link to 'source'
Resolve GitHub -> Gerrit (settings page or 403) -> … -> Gitiles :)

Change-Id: I9080a72e1240236d29ade76a31f47274463c24da

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,7 +62,7 @@ this program.  If not, see <http://www.gnu.org/licenses/>.
         <a href="/"><img src="https://tools-static.wmflabs.org/static/logos/powered-by-tool-labs.png" alt="Powered by Wikimedia Tool Labs"></a>
       </div>
       <p>
-          <a href="https://github.com/bd808/tools-stashbot">source</a>
+          <a href="https://gerrit.wikimedia.org/g/labs/tools/stashbot">source</a>
           <a href="https://www.gnu.org/copyleft/gpl.html">GNU GPLv3+</a>
       </p>
     </footer>
